--- a/index.html
+++ b/index.html
@@ -514,12 +514,10 @@ View(Cl_info)
 <slide class="" id="slide-28" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
-    <h2>一步一步來(1/3) - 去除雜訊資料列</h2>
+    <h2>一步一步來(1/3)</h2>
   </hgroup>
   <article data-timings="">
-    
-<div style='float:left;width:48%;'>
-<h3>去除前後不相干的資料列</h3>
+    <h3>去除前後不相干的資料列</h3>
 
 <pre><code>GDP_part1 = cbind(GDP,y=1:154)
 GDP_part2 = filter(GDP_part1,y&gt;4&amp;y&lt;137)
@@ -532,9 +530,10 @@ GDP_part2 = filter(GDP_part1,y&gt;4&amp;y&lt;137)
                         &quot;GDP_minus&quot;,&quot;GDP_minus_yoy&quot;,&quot;row_no&quot;)
 </code></pre>
 
+<div style='float:left;width:48%;'>
+
 </div>
   <div style='float:right;width:48%;'>
-<iframe src = './resources/figures/R_ETL_1.svg' height='600px'></iframe>
 
 </div>
   </article>
@@ -544,21 +543,25 @@ GDP_part2 = filter(GDP_part1,y&gt;4&amp;y&lt;137)
 <slide class="" id="slide-29" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
-    <h2>一步一步來(2/3) - 轉換資料格式</h2>
+    <h2>一步一步來(2/3)</h2>
   </hgroup>
   <article data-timings="">
-    
-<div style='float:left;width:48%;'>
-<h3>轉移文字格式</h3>
+    <h3>轉移文字格式</h3>
 
 <pre><code>#去除中間不合理的,在數字欄位上與補上百萬
 GDP_part3= mutate(GDP_part2,GDP = as.numeric(gsub(&quot;,&quot;, &quot;&quot;,GDP))*1000000)
 
 </code></pre>
 
+<ol>
+<li>我們利用了 <code>gsub</code>, 替換字元，將原先有問題的<code>,</code>去除</li>
+<li>而後利用了<code>as.numeric</code> 將原來的<code>文字</code>形態改成<code>數字</code></li>
+</ol>
+
+<div style='float:left;width:48%;'>
+
 </div>
   <div style='float:right;width:48%;'>
-<iframe src = './resources/figures/R_ETL_1.svg' height='600px'></iframe>
 
 </div>
   </article>
@@ -834,13 +837,13 @@ Cl_info_part7 = summarise(Cl_info_part6,
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=28 title='一步一步來(1/3) - 去除雜訊資料列'>
+        data-slide=28 title='一步一步來(1/3)'>
          28
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=29 title='一步一步來(2/3) - 轉換資料格式'>
+        data-slide=29 title='一步一步來(2/3)'>
          29
       </a>
     </li>
