--- a/index.html
+++ b/index.html
@@ -480,9 +480,7 @@ View(Cl_info)
 <slide class="quote" id="slide-26" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <article data-timings="">
-    <p><q></q></p>
-
-<iframe src = './resources/figures/R_ETL_2.svg' height='100px'></iframe>
+    <p><img src = './resources/figures/R_ETL_2.svg' height='100px'></img></p>
 
   </article>
   <!-- Presenter Notes -->
@@ -491,9 +489,7 @@ View(Cl_info)
 <slide class="quote" id="slide-27" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <article data-timings="">
-    <p><q></q></p>
-
-<iframe src = './resources/figures/R_ETL_2.svg' height='100px'></iframe>
+    <p><img src = './resources/figures/R_ETL_2.svg' height='100px'></img></p>
 
 <p><q>好亂，我想整理好這個data frome</q></p>
 
