--- a/index.html
+++ b/index.html
@@ -477,21 +477,23 @@ View(Cl_info)
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-26" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="quote" id="slide-26" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <article data-timings="">
-    <p><img src = './resources/figures/R_ETL_2.svg' ></img></p>
+    <p><q></q>
+<img src = './resources/figures/R_ETL_2.svg' ></img></p>
 
   </article>
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-27" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="quote" id="slide-27" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <article data-timings="">
-    <p><img src = './resources/figures/R_ETL_2.svg' ></img></p>
+    <p><q></q>
+<img src = './resources/figures/R_ETL_2.svg' ></img></p>
 
-<h3>好亂，我想整理好這個data frome</h3>
+<h3>好亂，我想<code>整理</code>好這個data frome</h3>
 
   </article>
   <!-- Presenter Notes -->
