--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@ Cl_info_part7 = summarise(Cl_info_part6,
 <ol>
 <li>自動化排程</li>
 <li>與資料庫溝通</li>
-<li></li>
+<li>其他的資料源</li>
 </ol>
 
   </article>
